syntax = "proto3";

package tensorpc.protos;
import "arraybuf.proto";
import "rpc_message.proto";

service RemoteObject {
  rpc RemoteCall (RemoteCallRequest) returns (RemoteCallReply) {}
  rpc RemoteGenerator (RemoteCallRequest) returns (stream RemoteCallReply) {}
  rpc RemoteJsonCall (RemoteJsonCallRequest) returns (RemoteJsonCallReply) {}
  rpc RemoteJsonGenerator (RemoteJsonCallRequest) returns (stream RemoteJsonCallReply) {}
  rpc RemoteStreamCall (stream RemoteCallRequest) returns (stream RemoteCallReply) {}
  rpc ServerShutdown (HealthCheckRequest) returns (HealthCheckReply) {}
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckReply) {}
  rpc QueryServerMeta(RemoteCallRequest) returns (SimpleReply) {}
  rpc QueryServiceMeta(RemoteCallRequest) returns (SimpleReply) {}
  rpc ChunkedRemoteCall (stream RemoteCallStream) returns (stream RemoteCallStream) {}
  // first RemoteCallRequest will save paramsters of generator call, following are generator data.
  rpc ClientStreamRemoteCall (stream RemoteCallRequest) returns (RemoteCallReply) {}
  rpc BiStreamRemoteCall (stream RemoteCallRequest) returns (stream RemoteCallReply) {}
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

